Fixes error icon alignment

--- a/app/assets/stylesheets/embeds/password_protected.css.scss
+++ b/app/assets/stylesheets/embeds/password_protected.css.scss
@@ -139,7 +139,7 @@ body.protected {
       width: 26px;
       height: 27px;
       top: -2px;
-      right: 4px;
+      right: 48px;
       left: auto;
       background-repeat:none;
       background-image: url(/assets/layout/error.png);
